
.. _kotlin-coroutine-version-5.2:

What's New in 5.2
-----------------

The 5.2 driver release includes the following new features,
improvements, and fixes:

.. sharedinclude:: dbx/jvm/v5.2-wn-items.rst

   .. replacement:: avs-index-link

      :ref:`kotlin-search-indexes` in the Indexes guide

- Adds support for serializers from the ``kotlinx-datetime`` library
  that let you map to BSON as the expected types. To learn more, see the
  :ref:`fundamentals-kotlin-serialization` guide.

.. _kotlin-coroutine-version-5.1.3:

What's New in 5.1.3
-------------------

The 5.1.3 driver patch release includes the following changes:

.. sharedinclude:: dbx/jvm/v5.1.3-wn-items.rst

.. _kotlin-coroutine-version-5.1.2:

What's New in 5.1.2
-------------------

The 5.1.2 driver patch release includes the following changes:

- Support for encoding Kotlin data classes with nullable
  generic parameter types. For example, you can encode the ``Container`` class
  in the following code:
  
  .. code-block:: kotlin

     @Serializable
     data class Box<T>(
         val boxed: T
     )
     
     @Serializable
     data class Container(
         val box: Box<String?>
     )

.. _kotlin-coroutine-version-5.1.1:

What's New in 5.1.1
-------------------

The 5.1.1 driver patch release includes the following changes:

- When using the ``MONGODB-OIDC`` authentication mechanism, you must not
  include comma characters in the ``authMechanismProperties`` connection
  string value. To learn more about this behavior, see the
  :ref:`MONGODB-OIDC <kotlin-oidc>` section of the Enterprise
  Authentication guide.

.. _kotlin-coroutine-version-5.1:

What's New in 5.1
-----------------

.. warning:: Deprecations in this release

   To avoid breaking changes in future major releases of the driver,
   replace any application code that depends on deprecated program elements.

This section includes the following information:

- :ref:`kotlin-deprecations-5.1`
- :ref:`kotlin-improvements-5.1`